# coursera-crypto

./: .gitmodules
week1-stream-cipher/: main.c
week2-block-cipher/: block_cipher.cpp  block_cipher.hpp  main.cpp
week3-msg-integrity/: Makefile.am  configure.ac  curldownloader.cpp  main.cpp
week3-msg-integrity/src/: curldownloader.hpp  main.cpp  msgintegrity.cpp  msgintegrity.hpp
week4-auth-encryption/: Makefile.am  configure.ac
week4-auth-encryption/src/: main.cpp  message.cpp  message.hpp  paddingoracle.cpp  paddingoracle.hpp
week5-basic-key-exchange/: Makefile.am
week5-basic-key-exchange/src/: main.cpp
week6-public-key-encryption/: Makefile.am
week6-public-key-encryption/src/: main.cpp
