AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = paddingoracle

paddingoracle_SOURCES= \
src/main.cpp

paddingoracle_CXXFLAGS= \
-I src \
-std=c++17


#msgintegrity_LDADD = \
#$(PTHREAD_CFLAGS) \
#-lcurl \
#-lpthread \
#-lboost_log \
#-lboost_log_setup \
#-lboost_system \
#-lboost_thread \
#-lboost_date_time \
#-lstdc++fs \
#-lcrypto++
